--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="menu_create_gallery">Add Gallery</string>
     <string name="menu_edit_gallery">Edit Gallery</string>
     <string name="menu_delete_gallery">Delete Gallery</string>
-    <string name="menu_synchronize_cache">Synchronize</string>
+    <string name="menu_synchronize_cache">Synchronize Cache</string>
     <string name="button_create">Create</string>
     <string name="button_edit">Edit</string>
     <string name="progress_title_verify">Verify Usercredentials</string>
