--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -5,6 +5,7 @@
     <string name="menu_edit_gallery">Galerie Bearbeiten</string>
     <string name="menu_delete_gallery">Galerie Löschen</string>
     <string name="menu_synchronize_cache">Cache synchronisieren</string>
+    <string name="menu_cleanup_cache">Cache aufräumen</string>
     <string name="button_create">hinzufügen</string>
     <string name="button_edit">bearbeiten</string>
     <string name="progress_title_verify">Überprüfe Sicherheitsangaben</string>
