--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="object_geo_lat">Latitude</string>
     <string name="object_geo_long">Longitude</string>
     <string name="object_geo_height">Height</string>
+    <string name="comment_wrote_at">wrote at</string>
 </resources>
