ADD: images and recources for picture sharing
refer #9

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -26,6 +26,7 @@
     <string name="object_uploaddate">Veröffentlicht</string>
     <string name="object_comments">Kommentare</string>
     <string name="menu_image_info">Bildinformationen</string>
+    <string name="menu_image_share">Teilen &#8230;</string>
     <string name="object_informations">Gallery Informationen</string>
     <string name="object_exif_informations">EXIF Informationen</string>
     <string name="object_exif_createdate">Aufnahmezeit</string>
